address word wrap for post-body, long words will no longer spill out of div

--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -255,6 +255,7 @@ hr {
 .post-body {
     margin-bottom: 20px;
     text-shadow: 4px 4px 8px var(--slim-shady);
+    word-wrap: break-word;
 }
 
 .comments {
